--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /404/
+permalink: /404.html
 ---
 
 Damn, this doesn't exist yet. :( Shoot me a message if it should though.
