--- a/404.md
+++ b/404.md
@@ -3,4 +3,4 @@ layout: default
 permalink: /404.html
 ---
 
-Damn, this doesn't exist yet. :( Shoot me a message if it should.
+Damn, this doesn't exist yet. :( Shoot me a [message](mailto:aranibatta@gmal.com) if it should.
