--- a/_posts/2016-05-07-elements.md
+++ b/_posts/2016-05-07-elements.md
@@ -1,13 +1,9 @@
 ---
-title: About Hagura
 layout: post
-date: 2016-11-02
+title: HTML elements
 ---
 
-
 ![sample post]({{site.baseurl}}/images/image-3.png)
-
-![sample post]({{site.baseurl}}/images/image-3.png){: style="width: 100%"}
 
 
 # Header 1
