--- a/_posts/2016-05-07-elements.md
+++ b/_posts/2016-05-07-elements.md
@@ -40,6 +40,9 @@ and an ordered list
 >
 > with multiple lines
 
+{% for post in site.posts %}
+<h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
+{% endfor %}
 
 
 
